# edge_face_recognition

./: CMakeLists.txt  README.md  build-android_RK3568.sh  build-linux_RK3568.sh  run_android.sh  run_linux.sh
include/: FacePreprocess.h  arcface.h  live.h  livefacereco.hpp  math.hpp  path.h
src/: arcface.cpp  live.cpp  livefacereco.cpp  main.cpp  mtcnn_new.cpp  tanybackup.cpp
